--- a/app/src/main/res/layout/todolist_body.xml
+++ b/app/src/main/res/layout/todolist_body.xml
@@ -1,38 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/todolist_body_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/background_light"
     android:gravity="top"
-    android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <TextView
-        android:id="@+id/navBodyTitleAppearance"
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/todolist_footer_archive_btn"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/action_settings"
-        android:textColor="@android:color/tertiary_text_light"
-        android:textSize="14sp"
-        android:visibility="visible" />
+        android:background="#FF5722"
+        android:drawableTop="@drawable/ic_nav_archive"
+        android:text="@string/footer_archive_btn"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/todolist_footer_todo_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/navBodyBtnTheme"
-        android:layout_width="match_parent"
+        android:id="@+id/todolist_footer_todo_btn"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@color/white"
-        android:drawableStart="@drawable/ic_menu_camera"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:text="@string/app_name"
-        android:textAlignment="textStart"
+        android:background="#FFC107"
+        android:drawableTop="@drawable/ic_nav_todo"
+        android:text="@string/footer_todo_btn"
         android:textAllCaps="false"
-        android:textColor="@android:color/primary_text_light" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/todolist_footer_done_btn"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/todolist_footer_archive_btn" />
 
-</LinearLayout>
+    <Button
+        android:id="@+id/todolist_footer_done_btn"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="#4CAF50"
+        android:drawableTop="@drawable/ic_nav_done"
+        android:text="@string/footer_done_btn"
+        android:textAllCaps="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/todolist_footer_todo_btn" />
+
+    <include
+        layout="@layout/todolist_content"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/todolist_footer_todo_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/todolist_new_task_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:contentDescription="@string/footer_new_task_btn"
+        android:focusable="true"
+        app:layout_constraintBottom_toTopOf="@+id/todolist_footer_todo_btn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/ic_drawer_tags" />
+</androidx.constraintlayout.widget.ConstraintLayout>
