--- a/app/src/main/res/layout/todolist_toolbar.xml
+++ b/app/src/main/res/layout/todolist_toolbar.xml
@@ -5,4 +5,4 @@
     android:layout_width="match_parent"
     app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:layout_height="?android:actionBarSize"
-    android:background="@color/teal_700"/>
+    android:background="@color/light_blue"/>
