Added task item layout

--- a/app/src/main/res/layout/todolist_content_fragment.xml
+++ b/app/src/main/res/layout/todolist_content_fragment.xml
@@ -5,12 +5,12 @@
     android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.main.PlaceholderFragment">
+    tools:context=".content.TasklistFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todolist_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/todolist_recycler_item" />
+        tools:listitem="@layout/task_recycler_item" />
 
 </FrameLayout>
