--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -27,11 +27,19 @@
         <item>5</item>
     </string-array>
 
-    <string-array name="notification_time_options">
+    <string-array name="notify_datetime_entries">
         <item>Never</item>
         <item>In 5 minutes</item>
         <item>In 10 minutes</item>
         <item>In 30 minutes</item>
         <item>In 1 hour</item>
+    </string-array>
+
+    <string-array name="notify_datetime_entry_values">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
     </string-array>
 </resources>
