Added protection settings subscreen

--- a/app/src/main/res/xml/settings_screen.xml
+++ b/app/src/main/res/xml/settings_screen.xml
@@ -19,7 +19,8 @@
         <Preference
             android:key="set_protection"
             android:title="@string/settings_btn_password"
-            android:summary="@string/settings_password_no_protection"/>
+            android:summary="@string/settings_password_no_protection"
+            app:fragment="com.mirage.todolist.view.settings.ProtectionSettingsFragment"/>
     </PreferenceCategory>
 
     <PreferenceCategory
