Added tap-to-unlock hint text animation

--- a/app/src/main/res/layout/lockscreen_tap.xml
+++ b/app/src/main/res/layout/lockscreen_tap.xml
@@ -8,7 +8,7 @@
     android:background="@color/light_blue">
 
     <ImageView
-        android:id="@+id/splash_image"
+        android:id="@+id/tap_unlock_image"
         android:layout_width="256dp"
         android:layout_height="256dp"
         android:importantForAccessibility="no"
@@ -19,7 +19,7 @@
         app:srcCompat="@mipmap/mrgtodolist" />
 
     <TextView
-        android:id="@+id/splash_app_name"
+        android:id="@+id/tap_unlock_app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="sans-serif-black"
@@ -28,17 +28,17 @@
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/splash_image" />
+        app:layout_constraintTop_toBottomOf="@+id/tap_unlock_image" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tap_unlock_hint"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:text="@string/lockscreen_tap_to_unlock"
         android:textColor="@color/white"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/splash_image"
+        app:layout_constraintBottom_toTopOf="@+id/tap_unlock_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
