--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="light_grey">@android:color/darker_gray</color>
     <color name="white">#FFFFFFFF</color>
     <color name="black">#FF000000</color>
+    <color name="white_transparent">#66FFFFFF</color>
 
     <color name="tasklist_background">@android:color/background_light</color>
     <color name="primary_text">@android:color/black</color>
