--- a/app/src/main/res/layout/lockscreen_password.xml
+++ b/app/src/main/res/layout/lockscreen_password.xml
@@ -75,6 +75,7 @@
         android:backgroundTint="@color/light_orange"
         android:text="@string/lockscreen_password_btn"
         android:textColor="@color/white"
+        android:textAllCaps="false"
         app:layout_constraintEnd_toEndOf="@+id/password_input"
         app:layout_constraintStart_toStartOf="@+id/password_input"
         app:layout_constraintTop_toBottomOf="@+id/password_input"
