--- a/app/src/main/res/layout/settings_graphical_key.xml
+++ b/app/src/main/res/layout/settings_graphical_key.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/create_pattern_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/tasklist_background">
 
     <com.andrognito.patternlockview.PatternLockView
         android:id="@+id/create_pattern_lock"
         android:layout_width="256dp"
         android:layout_height="256dp"
         android:importantForAccessibility="no"
-        app:normalStateColor="@color/light_orange"
+        app:normalStateColor="@color/light_blue"
+        app:correctStateColor="@color/light_orange"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +26,7 @@
         android:layout_marginTop="32dp"
         android:text="@string/protection_create_graphical_btn"
         android:textAllCaps="false"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/create_pattern_lock" />
