Added vector app icon

--- a/app/src/main/res/layout/lockscreen_password.xml
+++ b/app/src/main/res/layout/lockscreen_password.xml
@@ -16,7 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/mrgtodolist" />
+        app:srcCompat="@drawable/mirage_todo_app_icon" />
 
     <TextView
         android:id="@+id/password_app_name"
