--- a/app/src/main/res/layout/lockscreen_splash.xml
+++ b/app/src/main/res/layout/lockscreen_splash.xml
@@ -15,7 +15,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/mrgtodolist" />
+        app:srcCompat="@drawable/mirage_todo_app_icon" />
 
     <TextView
         android:id="@+id/splash_app_name"
