--- a/app/src/main/res/layout/tags_root_fragment.xml
+++ b/app/src/main/res/layout/tags_root_fragment.xml
@@ -4,73 +4,75 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tag_fragment_root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/tasklist_background">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tags_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?android:actionBarSize"
+        android:background="@color/light_blue"
+        app:titleTextColor="@color/white"
+        app:title="@string/drawer_btn_tags"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <ScrollView
         android:id="@+id/tag_fragment_scroll"
-        android:layout_width="409dp"
-        android:layout_height="729dp"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toBottomOf="@+id/tags_toolbar">
 
         <com.google.android.material.chip.ChipGroup
             android:id="@+id/tag_fragment_chips"
-            android:pointerIcon="none"
-            android:isScrollContainer="false"
-            app:selectionRequired="false"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:isScrollContainer="false"
+            app:chipSpacingHorizontal="16dp"
+            app:chipSpacingVertical="16dp"
+            app:selectionRequired="false">
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chip4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:theme="@style/Widget.MaterialComponents.Chip.Filter"
                 android:background="@drawable/round_corner"
                 android:checkable="false"
+                android:paddingStart="24dp"
+                android:paddingTop="12dp"
+                android:paddingEnd="24dp"
+                android:paddingBottom="12dp"
                 android:text="tagtag"
-                app:checkedIconEnabled="false"
-                app:closeIconEnabled="false"
-                app:chipIconEnabled="false"
-                app:checkedIcon="@drawable/baseline_place_24"
-                app:chipIcon="@drawable/baseline_edit_24"
-                app:closeIcon="@drawable/baseline_place_24"
                 android:textAlignment="center"
                 android:textSize="24sp"
-                android:paddingStart="24dp"
-                android:paddingEnd="24dp"
-                android:paddingTop="12dp"
-                android:paddingBottom="12dp"
+                android:theme="@style/Widget.MaterialComponents.Chip.Filter"
+                app:checkedIcon="@drawable/baseline_place_24"
+                app:checkedIconEnabled="false"
                 app:checkedIconVisible="false"
+                app:chipIcon="@drawable/baseline_edit_24"
+                app:chipIconEnabled="false"
                 app:chipIconVisible="false"
+                app:closeIcon="@drawable/baseline_place_24"
+                app:closeIconEnabled="false"
                 app:closeIconVisible="false" />
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_corner"
-                android:text="tagtagtag"
-                android:textSize="24sp"
-                android:paddingStart="48dp"
-                android:paddingEnd="48dp"
-                android:paddingTop="48dp"
-                android:paddingBottom="48dp" />
         </com.google.android.material.chip.ChipGroup>
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floatingActionButton"
+        android:id="@+id/tag_fragment_new_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
+        android:backgroundTint="@color/light_blue"
         android:clickable="true"
         android:contentDescription="@string/tags_new_tag_btn"
         android:focusable="true"
-        android:backgroundTint="@color/light_blue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:maxImageSize="48dp"
