--- a/app/src/main/res/layout/tags_root_fragment.xml
+++ b/app/src/main/res/layout/tags_root_fragment.xml
@@ -28,39 +28,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tags_toolbar">
 
-        <com.google.android.material.chip.ChipGroup
+        <com.mirage.todolist.view.todolist.tags.TagsView
             android:id="@+id/tag_fragment_chips"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:isScrollContainer="false"
+            app:enlarged="true"
             app:chipSpacingHorizontal="16dp"
             app:chipSpacingVertical="16dp"
-            app:selectionRequired="false">
-
-            <com.google.android.material.chip.Chip
-                android:id="@+id/chip4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/round_corner"
-                android:checkable="false"
-                android:paddingStart="24dp"
-                android:paddingTop="12dp"
-                android:paddingEnd="24dp"
-                android:paddingBottom="12dp"
-                android:text="tagtag"
-                android:textAlignment="center"
-                android:textSize="24sp"
-                android:theme="@style/Widget.MaterialComponents.Chip.Filter"
-                app:checkedIcon="@drawable/baseline_place_24"
-                app:checkedIconEnabled="false"
-                app:checkedIconVisible="false"
-                app:chipIcon="@drawable/baseline_edit_24"
-                app:chipIconEnabled="false"
-                app:chipIconVisible="false"
-                app:closeIcon="@drawable/baseline_place_24"
-                app:closeIconEnabled="false"
-                app:closeIconVisible="false" />
-        </com.google.android.material.chip.ChipGroup>
+            app:selectionRequired="false" />
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
