Added tag edit dialog

--- a/app/src/main/res/color/tag_background_grey.xml
+++ b/app/src/main/res/color/tag_background_grey.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:color="@color/dark_blue"
+        android:color="#4E504C"
         android:state_checked="true" />
 
     <item
-        android:color="@color/dark_blue"
+        android:color="#4E504C"
         android:state_pressed="true" />
 
-    <item android:color="@color/light_blue" />
+    <item android:color="#6D7169" />
 </selector>
