--- a/app/src/main/res/layout/tags_root_fragment.xml
+++ b/app/src/main/res/layout/tags_root_fragment.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:mrg="http://mirage.com/mrg"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/tag_fragment_root"
     android:layout_width="match_parent"
@@ -28,15 +29,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tags_toolbar">
 
-        <com.mirage.todolist.view.todolist.tags.TagsView
-            android:id="@+id/tag_fragment_chips"
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/tag_fragment_scroll_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:isScrollContainer="false"
-            app:enlarged="true"
-            app:chipSpacingHorizontal="16dp"
-            app:chipSpacingVertical="16dp"
-            app:selectionRequired="false" />
+            android:layout_height="wrap_content">
+
+            <com.mirage.todolist.view.todolist.tags.TagsView
+                android:id="@+id/tag_fragment_chips"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:isScrollContainer="false"
+                app:chipSpacingHorizontal="16dp"
+                app:chipSpacingVertical="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:selectionRequired="false"
+                mrg:enlarged="true" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
