--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,13 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">200dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+
+    <dimen name="tag_chip_stroke_width_normal">8dp</dimen>
+    <dimen name="tag_chip_stroke_width_enlarged">0dp</dimen>
+    <dimen name="tag_chip_text_size_normal">8dp</dimen>
+    <dimen name="tag_chip_text_size_enlarged">14dp</dimen>
+    <dimen name="tag_chip_padding_normal">12dp</dimen>
+    <dimen name="tag_chip_padding_enlarged">24dp</dimen>
+
+    <dimen name="tag_recolor_btn_text_size">8dp</dimen>
 </resources>
