--- a/app/src/main/res/layout/task_recycler_item.xml
+++ b/app/src/main/res/layout/task_recycler_item.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:mrg="http://mirage.com/mrg"
     android:id="@+id/task_item_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -27,15 +28,18 @@
             android:textColor="@android:color/primary_text_light"
             android:textSize="24sp" />
 
-        <com.google.android.material.chip.ChipGroup
+        <com.mirage.todolist.view.todolist.tags.TagsView
             android:id="@+id/task_tags"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_weight="2">
+            android:layout_marginTop="6dp"
+            android:layout_marginStart="6dp"
+            android:layout_weight="1"
+            android:layoutDirection="rtl"
+            app:chipSpacingVertical="2dp"
+            mrg:enlarged="false">
 
-        </com.google.android.material.chip.ChipGroup>
+        </com.mirage.todolist.view.todolist.tags.TagsView>
 
     </LinearLayout>
 
