Added task editor activity

--- a/app/src/main/res/layout/task_recycler_item.xml
+++ b/app/src/main/res/layout/task_recycler_item.xml
@@ -37,6 +37,7 @@
             android:layout_weight="1"
             android:layoutDirection="rtl"
             app:chipSpacingVertical="2dp"
+            mrg:closeIconEnabled="false"
             mrg:enlarged="false">
 
         </com.mirage.todolist.view.todolist.tags.TagsView>
