--- a/app/src/main/res/layout/tags_root_fragment.xml
+++ b/app/src/main/res/layout/tags_root_fragment.xml
@@ -52,6 +52,7 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 app:selectionRequired="false"
+                mrg:closeIconEnabled="false"
                 mrg:enlarged="true" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
