--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,6 +19,16 @@
         <item name="android:navigationBarColor">@color/light_blue</item>
     </style>
 
+    <style name="Theme.TodoApp.EditTaskActivity" parent="Theme.TodoApp">
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
+        <item name="android:textColorPrimary">@color/primary_text</item>
+        <item name="android:textColorSecondary">@color/secondary_text</item>
+        <item name="android:textColorTertiary">@color/tertiary_text</item>
+        <item name="alertDialogTheme">@style/Theme.TodoApp.SettingsAlertDialog</item>
+        <item name="android:actionBarStyle">@style/Theme.TodoApp.SettingsActionBar</item>
+    </style>
+
     <style name="Theme.TodoApp.SettingsActivity" parent="Theme.TodoApp">
         <item name="windowActionBar">true</item>
         <item name="windowNoTitle">false</item>
