--- a/app/src/main/res/layout/edit_task_tags.xml
+++ b/app/src/main/res/layout/edit_task_tags.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:mrg="http://mirage.com/mrg"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/edit_task_tags_title"
@@ -35,7 +35,7 @@
     <com.mirage.todolist.view.todolist.tags.TagsView
         android:id="@+id/edit_task_tags_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
