--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -25,8 +25,12 @@
         <item name="android:textColorPrimary">@color/primary_text</item>
         <item name="android:textColorSecondary">@color/secondary_text</item>
         <item name="android:textColorTertiary">@color/tertiary_text</item>
-        <item name="alertDialogTheme">@style/Theme.TodoApp.SettingsAlertDialog</item>
+        <item name="alertDialogTheme">@style/Theme.TodoApp.EditTaskAlertDialog</item>
         <item name="android:actionBarStyle">@style/Theme.TodoApp.SettingsActionBar</item>
+    </style>
+
+    <style name="Theme.TodoApp.EditTaskAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert.Bridge">
+        <item name="colorAccent">@color/light_orange</item>
     </style>
 
     <style name="Theme.TodoApp.SettingsActivity" parent="Theme.TodoApp">
