--- a/app/src/main/res/layout/edit_task_datetime.xml
+++ b/app/src/main/res/layout/edit_task_datetime.xml
@@ -1,7 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/edit_task_date_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/edit_task_date_title"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_task_date_btn"
+        app:layout_constraintEnd_toStartOf="@+id/edit_task_date_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/edit_task_date_btn" />
+
+    <TextView
+        android:id="@+id/edit_task_time_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/edit_task_time_title"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_task_time_btn"
+        app:layout_constraintEnd_toStartOf="@+id/edit_task_time_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/edit_task_time_btn" />
+
+    <TextView
+        android:id="@+id/edit_task_period_title"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/edit_task_period_title"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/edit_task_period_btn"
+        app:layout_constraintEnd_toStartOf="@+id/edit_task_period_btn"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/edit_task_period_btn" />
+
+    <Button
+        android:id="@+id/edit_task_date_btn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/edit_task_date_not_set"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/edit_task_time_btn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/edit_task_time_not_set"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_task_date_btn" />
+
+    <Button
+        android:id="@+id/edit_task_period_btn"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text=""
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/edit_task_time_btn"
+        tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
