--- a/app/src/main/res/layout/edit_task_content.xml
+++ b/app/src/main/res/layout/edit_task_content.xml
@@ -53,6 +53,6 @@
         android:textSize="20sp" />
 
     <include layout="@layout/edit_task_tags" />
-    <include layout="@layout/edit_task_location" />
+    <include layout="@layout/edit_task_location" android:visibility="gone"/>
     <include layout="@layout/edit_task_datetime" />
 </LinearLayout>
