--- a/app/src/main/res/layout/task_recycler_item.xml
+++ b/app/src/main/res/layout/task_recycler_item.xml
@@ -85,6 +85,7 @@
         android:text="@string/task_default_description"
         android:textColor="@android:color/secondary_text_light"
         android:textSize="16sp"
+        android:visibility="gone"
         app:drawableStartCompat="@drawable/baseline_place_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/task_edit_btn"
