--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,6 +31,11 @@
 
     <style name="Theme.TodoApp.EditTaskAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert.Bridge">
         <item name="colorAccent">@color/light_orange</item>
+        <item name="colorControlActivated">@color/dark_orange</item>
+        <item name="android:selectableItemBackgroundBorderless">@color/light_grey</item>
+        <item name="colorControlHighlight">@color/light_orange</item>
+        <item name="android:textColorPrimary">@color/lighter_blue</item>
+        <item name="android:textColorSecondary">@color/lighter_blue</item>
     </style>
 
     <style name="Theme.TodoApp.SettingsActivity" parent="Theme.TodoApp">
