--- a/app/src/main/res/layout/fragment_tasklist.xml
+++ b/app/src/main/res/layout/fragment_tasklist.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/tasklist_background"
-    tools:context=".view.todolist.tasks.TaskRecyclerFragment">
+    tools:context=".ui.todolist.tasks.TaskRecyclerFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/todolist_recycler_view"
