--- a/app/src/main/res/layout/layout_edit_task_tags.xml
+++ b/app/src/main/res/layout/layout_edit_task_tags.xml
@@ -32,7 +32,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <com.mirage.todolist.view.todolist.tags.TagsView
+    <com.mirage.todolist.ui.todolist.tags.TagsView
         android:id="@+id/edit_task_tags_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
